added topics and redirecting links to corresoponding pages

--- a/index.html
+++ b/index.html
@@ -22,13 +22,65 @@
       thereby helps the website sustain. If you'd like you are also welcome to
       donate :)
     </p>
-    <h2>About SSC exams</h2>
-    <h2>Motivation and mindset</h2>
-    <h2>Learn a language</h2>
-    <h3>English</h3>
-    <h3>Hindi(Optional)</h3>
-    <h2>General knowledge</h2>
-    <h2>Reasoning</h2>
-    <h2>Mathematics</h2>
+    <a href="./topics/aboutSSC.html">
+      <div>
+        <h2>About SSC exams</h2>
+        <p>General guidlines and rules</p>
+      </div>
+    </a>
+
+    <a href="./topics/motivationAndMindeset.html">
+      <div>
+        <h2>Motivation and mindset</h2>
+        <p>Study tips and study psychology</p>
+      </div>
+    </a>
+
+    <div>
+      <h2>Learn a language</h2>
+      <p>
+        Mastering a core language at the start will help you in not just the
+        subject but the entire career
+      </p>
+      <a href="./topics/english.html">
+        <div>
+          <h3>English</h3>
+          <p>
+            Also helps you in finding really good resources from around the
+            globe
+          </p>
+        </div>
+      </a>
+      <a href="./topics/hindi.html">
+        <div>
+          <h3>Hindi(Optional)</h3>
+          <p>
+            Most YouTube channels discussing SSC are in Hindi. If you're mother
+            tongue isn't Hindi, learning Hindi can be helpful
+          </p>
+        </div>
+      </a>
+    </div>
+
+    <a href="./topics/generalKnowledge.html">
+      <div>
+        <h2>General knowledge</h2>
+        <p>Resources to gain general knowledge</p>
+      </div>
+    </a>
+
+    <a href="./topics/reasoning.html">
+      <div>
+        <h2>Reasoning</h2>
+        <p>Puzzles are always fun!</p>
+      </div>
+    </a>
+
+    <a href="./topics/mathematics.html">
+      <div>
+        <h2>Mathematics</h2>
+        <p>It's not scary as it looks!</p>
+      </div>
+    </a>
   </body>
 </html>
