added homepage stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./global.css" />
     <title>SSC self study resources</title>
   </head>
   <body>
@@ -23,20 +24,20 @@
       donate :)
     </p>
     <a href="./topics/aboutSSC.html">
-      <div>
+      <div class="topic">
         <h2>About SSC exams</h2>
         <p>General guidlines and rules</p>
       </div>
     </a>
 
     <a href="./topics/motivationAndMindeset.html">
-      <div>
+      <div class="topic">
         <h2>Motivation and mindset</h2>
         <p>Study tips and study psychology</p>
       </div>
     </a>
 
-    <div>
+    <div class="topic">
       <h2>Learn a language</h2>
       <p>
         Mastering a core language at the start will help you in not just the
@@ -63,21 +64,21 @@
     </div>
 
     <a href="./topics/generalKnowledge.html">
-      <div>
+      <div class="topic">
         <h2>General knowledge</h2>
         <p>Resources to gain general knowledge</p>
       </div>
     </a>
 
     <a href="./topics/reasoning.html">
-      <div>
+      <div class="topic">
         <h2>Reasoning</h2>
         <p>Puzzles are always fun!</p>
       </div>
     </a>
 
     <a href="./topics/mathematics.html">
-      <div>
+      <div class="topic">
         <h2>Mathematics</h2>
         <p>It's not scary as it looks!</p>
       </div>
