basic about page

--- a/index.html
+++ b/index.html
@@ -83,5 +83,12 @@
         <p>It's not scary as it looks!</p>
       </div>
     </a>
+
+    <a href="">
+      <div class="topic">
+        <h2>Soft skills</h2>
+        <p>Soft skills with hard improvements</p>
+      </div>
+    </a>
   </body>
 </html>
