--- a/topics/aboutSSC.html
+++ b/topics/aboutSSC.html
@@ -7,5 +7,33 @@
   </head>
   <body>
     <h1>About SSC exams</h1>
+    <p>
+      SSC Examinations is conducted by the Staff Selection Commission to recruit
+      Group B and C officers to various posts in top ministries, departments and
+      organisations of the Government of India
+    </p>
+    <p>Staff Selection Commission conducts various exams as given below</p>
+    <ul>
+      <li>SSC Combined Graduate Level (SSC CGL)</li>
+      <li>SSC Combined Higher Secondary Level (SSC CHSL)</li>
+      <li>SSC Stenographer C & D (SSC Stenographer)</li>
+      <li>SSC Multitasking Staff (SSC MTS)</li>
+      <li>SSC Junior Engineer (SSC JE)</li>
+      <li>SSC Junior Hindi Translator (SSC JHT)</li>
+      <li>SSC General Duty Constable (SSC GD)</li>
+      <li>SSC Central Police Organization & SI (SSC CPO)</li>
+      <li>SSC Selection Post</li>
+    </ul>
+
+    <p>
+      The main curriculam will be focused on the fundamentals and topics that
+      are common across all exams. Resources for specialised exams will be
+      created on request basis or feel free to contribute :)
+    </p>
+
+    <div>
+      <h2>Resources</h2>
+      <a href="https://ssc.gov.in/">The official SSC website</a>
+    </div>
   </body>
 </html>
