added some content to the english section

--- a/topics/english.html
+++ b/topics/english.html
@@ -7,5 +7,36 @@
   </head>
   <body>
     <h1>English</h1>
+    <p>
+      English is as important in day to day life as in the exams if not more.
+      Learning English helps you to understand other areas of the exam like
+      understanding instructions and will help with communicating if you get a
+      job and have to move to other states where the native language is
+      different from your mother tongue.
+    </p>
+
+    <p>
+      It also helps you find more and more valuable resources across the
+      internet that will help you in your studies like
+      <a href="https://www.youtube.com/watch?v=_uk_6vfqwTA">this channel</a> or
+      you just want to
+      <a href="https://www.youtube.com/@TomScottGo/videos">explore :)</a>
+    </p>
+
+    <h2>Resources</h2>
+    <p>See the <a href="">subject info</a> on the official website</p>
+
+    <h3>Basics</h3>
+    <p>Learn basic grammar and vocabulary</p>
+    <ul>
+      <li>
+        <a href="https://www.khanacademy.org/humanities/grammar"
+          >Basic grammar on Khan Academy</a
+        >
+      </li>
+    </ul>
+
+    <h3>Exam specific</h3>
+    <div markdown="1">Have **fun!**</div>
   </body>
 </html>
