--- a/topics/mathematics.html
+++ b/topics/mathematics.html
@@ -7,5 +7,91 @@
   </head>
   <body>
     <h1>Mathematics</h1>
+    <p>
+      “If people do not believe that mathematics is simple, it is only because
+      they do not realize how complicated life is.” — John von Neumann,
+      Mathematician and Computer Science Pioneer
+    </p>
+    <p>
+      Maths isn't as scary as you think if you are willing to learn, relearn and
+      unlearn. Recommended study pattern is to learn the basics and learn the
+      steps to solve a problem the long method then once you are comfortable
+      with that pratice using the shortcut methods. Jumping directly to the
+      shortcut way might not be sustainable.
+    </p>
+    <p>
+      From analysing your personal cash flow to understanding Large language
+      models(LLMs), maths gonna help you. It's also a great way to exercise your
+      brain.
+    </p>
+    <h2>Learn the basics</h2>
+    <ul>
+      <li>
+        <a href="https://ncert.nic.in/textbook.php"
+          >Learn and practice using NCERT textbooks from 6th to 10th</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.youtube.com/watch?v=VXzm8ReImG0&list=PLgIi4lM74yW0ChmzTdT1w5ruCnqP0bv3J&index=1&t=3s"
+          >Pre alegbra video lesson by GreeneMath.com</a
+        >
+      </li>
+      <li>
+        <a href="https://www.khanacademy.org/"
+          >The math section on Khan Academy</a
+        >
+      </li>
+      <li>
+        <a href="https://openstax.org/details/books/prealgebra-2e"
+          >Pre algebra textbook from Openstax</a
+        >
+      </li>
+      <li>
+        <a href="https://openstax.org/details/books/elementary-algebra-2e"
+          >Elementry algebra from Openstax</a
+        >
+      </li>
+    </ul>
+    <h2>Advanced maths</h2>
+    <ul>
+      <li>
+        <a href="https://openstax.org/details/books/intermediate-algebra-2e"
+          >Intermediate algebra from Openstax</a
+        >
+      </li>
+      <li>
+        <a href="https://openstax.org/details/books/algebra-and-trigonometry-2e"
+          >Algebra and Trignometry from Openstax</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.khanacademy.org/math/ncert-class-11/xea4762213f311c5e:trigonometric-functions"
+          >Class 11 trignometry lessons from Khan Academy</a
+        >
+      </li>
+    </ul>
+    <h2>Exam specific</h2>
+    <ul>
+      <li>
+        <a href="https://openstax.org/details/books/contemporary-mathematics"
+          >Contemporary mathematics from Openstax</a
+        >
+      </li>
+    </ul>
+    <h2>Still curious?</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/@3blue1brown"
+          >3blue1brown's youtube channel</a
+        >
+      </li>
+      <li>
+        <a href="https://www.youtube.com/@numberphile"
+          >numberphile's youtube channel</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
